; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-stdio-over-pipes.c_exit_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-stdio-over-pipes.c_exit_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"exit_cb\0A\00", align 1
@exit_cb_called = common dso_local global i32 0, align 4
@close_cb = common dso_local global i32 0, align 4
@in = common dso_local global i32 0, align 4
@out = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32)* @exit_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @exit_cb(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = call i32 @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %8 = load i32, i32* @exit_cb_called, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* @exit_cb_called, align 4
  %10 = load i64, i64* %5, align 8
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = load i32, i32* %6, align 4
  %15 = icmp eq i32 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @ASSERT(i32 %16)
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* @close_cb, align 4
  %20 = call i32 @uv_close(i32* %18, i32 %19)
  %21 = load i32, i32* @close_cb, align 4
  %22 = call i32 @uv_close(i32* @in, i32 %21)
  %23 = load i32, i32* @close_cb, align 4
  %24 = call i32 @uv_close(i32* @out, i32 %23)
  ret void
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_close(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
